tests/ui/object-safety/avoid-ice-on-warning.new.stderr
error: return types are denoted using `->`
  --> $DIR/avoid-ice-on-warning.rs:4:23
   |
LL | fn call_this<F>(f: F) : Fn(&str) + call_that {}
   |                       ^
   |
help: use `->` instead
   |
LL | fn call_this<F>(f: F) -> Fn(&str) + call_that {}
   |                       ~~

error[E0405]: cannot find trait `call_that` in this scope
  --> $DIR/avoid-ice-on-warning.rs:4:36
   |
LL | fn call_this<F>(f: F) : Fn(&str) + call_that {}
   |                                    ^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0405`.
